--- a/django-api/requirements.txt
+++ b/django-api/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework_simplejwt==5.5.0
 iniconfig==2.1.0
 Markdown==3.8
 packaging==25.0
+pillow==11.2.1
 pluggy==1.5.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
