feat(be): add post comments

--- a/django-api/requirements.txt
+++ b/django-api/requirements.txt
@@ -5,6 +5,7 @@ django-extensions==4.1
 django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+drf-nested-routers==0.94.1
 iniconfig==2.1.0
 Markdown==3.8
 packaging==25.0
